Starting over again, this is mostly based off the template

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,5 +40,5 @@
         android:layout_height="wrap_content"
         android:text="Free Throw"
         android:layout_margin="15dp"/>
-
+    /^comment to test git*/
 </LinearLayout>
